kiban_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:7.14.1
          resources:
            limits:
              memory: "1Gi"  # Limit memory to 1GB
            requests:
              memory: "1Gi"  # Allocate 1GB memory
          ports:
            - containerPort: 5601
