gitea-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: gitea
  name: gitea
#  namespace: argocd
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: gitea
  type: ClusterIP
status:
  loadBalancer: {}
