kibana_svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: kibana
spec:
  ports:
  - port: 5601
    protocol: TCP
    targetPort: 5601
  selector:
    app: kibana
status:
  loadBalancer: {}
