nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment
  namespace: default
spec:
  clusterIP: 10.104.68.128
  clusterIPs:
  - 10.104.68.128
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
